@@ -314,6 +314,7 @@ questskill: 40
 
 // Sets the speed you can walk/attack at. Default is 150.
 speed: 40
+charspeed: 40
 
 // Enables spirit sphere balls.
 spiritball: 40
